k8s/autoscaling/custom-metrics/sample-prometheus-instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-metrics-prom
  labels:
    app: sample-metrics-prom
    prometheus: sample-metrics-prom
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 8201
    port: 9090
    targetPort: web
  selector:
    prometheus: sample-metrics-prom
